x11proto-kb (1.0.4-2) UNRELEASED; urgency=low

  * Remove myself from Uploaders.

 -- Julien Cristau <jcristau@debian.org>  Sat, 23 Jan 2010 12:19:14 +0100

x11proto-kb (1.0.4-1) unstable; urgency=low

  [ Timo Aaltonen ]
  * New upstream release (closes: #556006).
  * Add README.source from xsfbs. Bump Standards-Version to 3.8.3.
  * Bump debhelper compat level to 5.
  * Drop Conflicts/Replaces on libxkbfile-dev and Pre-Depends on x11-common.
    This was needed for upgrades from sarge.
  * Parse space-separated DEB_BUILD_OPTIONS, and handle parallel=N.
  * Run autoreconf on build. Add build-deps on automake and xutils-dev.
  * Bump the build-dep on xutils-dev (>= 1:7.5~1).

 -- Julien Cristau <jcristau@debian.org>  Sat, 21 Nov 2009 13:31:13 +0100

x11proto-kb (1.0.3-3) unstable; urgency=low

  [ Brice Goglin ]
  * Update the long description.
  * Add URL in debian/copyright.
  * Add Vcs-* to debian/control.
  * Remove Fabio from Uploaders, with his permission.

  [ Julien Cristau ]
  * Remove Branden from Uploaders with his permission.
  * Add myself to Uploaders.
  * Bump Standards-Version to 3.7.3.

 -- Julien Cristau <jcristau@debian.org>  Sun, 11 May 2008 19:05:39 +0200

x11proto-kb (1.0.3-2) unstable; urgency=low

  * Upload to unstable

 -- David Nusinow <dnusinow@debian.org>  Mon, 21 Aug 2006 21:18:42 +0000

x11proto-kb (1.0.3-1) experimental; urgency=low

  * New upstream release.
  * Test for obj-$(DEB_BUILD_GNU_TYPE) before creating it during build;
    idempotency fix.
  * Run dh_install w/ --list-missing.
  * Change debhelper build-dep-indep to a normal build-dep, as dh_clean
    is called inside the clean rule.
  * Drop duplicate x11-common dep in -dev package.
  * Bump standards version to 3.7.2.0.
  * Version x11-common pre-dep in -dev package to 1:7.0.0 to match
    the rest of Debian.

 -- Andres Salomon <dilinger@debian.org>  Fri, 21 Jul 2006 02:57:25 -0400

x11proto-kb (1.0.2-3) unstable; urgency=low

  * Upload to unstable
