@@ -1,6 +1,8 @@
 x11proto-kb (1.0.4-2) UNRELEASED; urgency=low
 
   * Remove myself from Uploaders.
+  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
+    good reason.  Thanks, Colin Watson!
 
  -- Julien Cristau <jcristau@debian.org>  Sat, 23 Jan 2010 12:19:14 +0100
 
